--- a/MyApplication2/app/src/main/res/layout/activity_guess_the_right_color.xml
+++ b/MyApplication2/app/src/main/res/layout/activity_guess_the_right_color.xml
@@ -12,7 +12,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="132dp"
-        android:text="Button"
         app:layout_constraintEnd_toStartOf="@+id/option2"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,7 +22,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="132dp"
-        android:text="Button"
         app:layout_constraintEnd_toStartOf="@+id/option3"
         app:layout_constraintHorizontal_bias="0.79"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +33,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="132dp"
         android:layout_marginEnd="28dp"
-        android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -57,7 +54,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="65dp"
-        android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -143,7 +139,7 @@
         app:layout_constraintTop_toBottomOf="@+id/option3" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/wrongChoice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="WRONG"
