Buttons visability status updated

--- a/MyApplication2/app/src/main/res/layout/activity_guess_the_right_color.xml
+++ b/MyApplication2/app/src/main/res/layout/activity_guess_the_right_color.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="132dp"
+        android:visibility="invisible"
         app:layout_constraintEnd_toStartOf="@+id/option2"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,10 +26,14 @@
         app:layout_constraintEnd_toStartOf="@+id/option3"
         app:layout_constraintHorizontal_bias="0.79"
         app:layout_constraintStart_toStartOf="parent"
+        android:visibility="invisible"
+
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/option3"
+        android:visibility="invisible"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="132dp"
