--- a/MyApplication2/app/src/main/res/layout/activity_learn_colors.xml
+++ b/MyApplication2/app/src/main/res/layout/activity_learn_colors.xml
@@ -12,7 +12,7 @@
         android:id="@+id/imageView2"
         android:layout_width="100dp"
         android:layout_height="80dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="46dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.051"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,6 +26,7 @@
         android:layout_height="wrap_content"
         android:text="@string/grey"
         android:textColor="@color/grey"
+        android:textAllCaps="true"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
         app:layout_constraintStart_toStartOf="@+id/imageView2"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
@@ -48,6 +49,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/white"
+        android:textAllCaps="true"
+
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/imageView3"
         app:layout_constraintStart_toStartOf="@+id/imageView3"
@@ -72,6 +75,8 @@
         android:layout_height="wrap_content"
         android:text="@string/red"
         android:textColor="@color/red"
+        android:textAllCaps="true"
+
         app:layout_constraintEnd_toEndOf="@+id/imageView4"
         app:layout_constraintStart_toStartOf="@+id/imageView4"
         app:layout_constraintTop_toBottomOf="@+id/imageView4" />
@@ -94,6 +99,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/orange"
+        android:textAllCaps="true"
+
         android:textColor="@color/orange"
         app:layout_constraintEnd_toEndOf="@+id/imageView5"
         app:layout_constraintStart_toStartOf="@+id/imageView5"
@@ -117,6 +124,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/pink"
+        android:textAllCaps="true"
+
         android:textColor="@color/pink"
         app:layout_constraintEnd_toEndOf="@+id/imageView6"
         app:layout_constraintStart_toStartOf="@+id/imageView6"
@@ -141,6 +150,8 @@
         android:layout_height="wrap_content"
         android:text="@string/blue"
         android:textColor="@color/blue"
+        android:textAllCaps="true"
+
         app:layout_constraintEnd_toEndOf="@+id/imageView7"
         app:layout_constraintStart_toStartOf="@+id/imageView7"
         app:layout_constraintTop_toBottomOf="@+id/imageView7" />
@@ -163,6 +174,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/purple"
+        android:textAllCaps="true"
+
         android:textColor="@color/purple"
         app:layout_constraintEnd_toEndOf="@+id/imageView8"
         app:layout_constraintStart_toStartOf="@+id/imageView8"
@@ -187,6 +200,8 @@
         android:layout_height="wrap_content"
         android:text="@string/yellow"
         android:textColor="@color/yellow"
+        android:textAllCaps="true"
+
         app:layout_constraintEnd_toEndOf="@+id/imageView9"
         app:layout_constraintStart_toStartOf="@+id/imageView9"
         app:layout_constraintTop_toBottomOf="@+id/imageView9" />
@@ -210,6 +225,8 @@
         android:layout_height="wrap_content"
         android:text="@string/green"
         android:textColor="@color/green"
+        android:textAllCaps="true"
+
         app:layout_constraintEnd_toEndOf="@+id/imageView10"
         app:layout_constraintStart_toStartOf="@+id/imageView10"
         app:layout_constraintTop_toBottomOf="@+id/imageView10" />
@@ -218,9 +235,9 @@
         android:id="@+id/imageView11"
         android:layout_width="179dp"
         android:layout_height="144dp"
-        android:layout_marginTop="532dp"
+        android:layout_marginTop="524dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.483"
+        app:layout_constraintHorizontal_bias="0.125"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/black" />
@@ -233,8 +250,22 @@
         android:layout_height="wrap_content"
         android:text="@string/black"
         android:textColor="@color/white"
+        android:textAllCaps="true"
+
         app:layout_constraintEnd_toEndOf="@+id/imageView11"
         app:layout_constraintStart_toStartOf="@+id/imageView11"
         app:layout_constraintTop_toBottomOf="@+id/imageView11" />
+
+    <Button
+        android:id="@+id/BackButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Main Menu"
+        android:background="@color/LightBlue"
+        app:layout_constraintStart_toEndOf="@+id/imageView11"
+        app:layout_constraintTop_toBottomOf="@+id/greenText" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
