--- a/MyApplication2/app/src/main/res/layout/activity_list_view.xml
+++ b/MyApplication2/app/src/main/res/layout/activity_list_view.xml
@@ -9,7 +9,7 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/CustomListView"
+        android:id="@+id/MyListView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
